crates/data-dict/tests/snapshots/validate_spec__an_unknown_top_level_language_is_rejected_structurally.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
language: perl
description: Each row is a survey response.
tables:
  - name: survey
    columns:
      - name: postcode
        type: string
────────────────────────────────────────
error[Q-1-12]: A value must be one of its schema's allowed values.
  --> dict.yaml:3:11
   |
LL | language: perl
   |           ^^^^ Value must be one of: "sql", "r", "python", got '"perl"'
   |
   = help: Check the schema for allowed values?
