crates/data-dict/tests/snapshots/validate_spec__warn_single_table_description.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: food
    description: Each row is a food item.
    details: Collected from the USDA FoodData Central database.
    columns:
      - name: id
        type: number(id)
        examples: [1, 2, 3]
────────────────────────────────────────
Warning: [S16] A single-table dictionary's description and details belong at the top level.
   ╭─[ dict.yaml:5:5 ]
   │
 4 │   - name: food
 5 │     description: Each row is a food item.
   │     ─────┬─────  
   │          ╰─────── table `food` has a `description`
───╯

Warning: [S16] A single-table dictionary's description and details belong at the top level.
   ╭─[ dict.yaml:6:5 ]
   │
 4 │   - name: food
 5 │     description: Each row is a food item.
 6 │     details: Collected from the USDA FoodData Central database.
   │     ───┬───  
   │        ╰───── table `food` has a `details`
───╯
